--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
   <main class="container">
     <section class="hero">
       <div class="hero-copy">
-        <p class="eyebrow">Software engineer</p>
         <h1>Hi, I'm Han.</h1>
-        <p class="subtitle">@ OpenAI. Previously <a href="https://www.verkada.com">Verkada</a>. ch.robert.26 at gmail.com</p>
+        <p class="subtitle">ch.robert.26 at gmail.com</p>
 
         <div class="bio">
-          <p>Han is currently a software engineer @ OpenAI.</p>
+          <p>Han is currently a Member of Technical Staff @ <a href="https://www.openai.com">OpenAI</a>.</p>
           <p>Before joining OpenAI:</p>
           <p>Han worked at <a href="https://www.verkada.com">Verkada</a>. As the first IC on data-platform team, Han contributed to building PB scale IoT data-platform from scratch. Han recently joined Search &amp; CV team, working on product side of Verkada.</p>
           <p>Han graduated from <a href="https://www.wisc.edu">University of Wisconsin-Madison</a> in 05/2021 (B.S.), he majored in computer sciences, statistics, and philosophy.</p>
