--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="brand">Han Cao</div>
       <nav class="nav">
         <a class="nav-link" href="index.html">Home</a>
-        <a class="nav-link" href="blog/index.html">Blog</a>
+        <!-- <a class="nav-link" href="blog/index.html">Blog</a> -->
       </nav>
     </div>
   </header>
